--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Code Challenge",
   "main": "index.js",
+  "engines": {
+    "node": "0.10.36"
+  },
   "author": "Bryce Jacobs",
   "license": "ISC",
   "dependencies": {
